--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express-fileupload": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.11",
     "nodemon": "^3.1.9",
     "ts-node-dev": "^2.0.0",
